--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -30,7 +30,7 @@
                             <ListBoxItem x:Name="ubBox">Unread Bytes:</ListBoxItem>
                         </ListBox>
                     </StackPanel>
-                    <StackPanel Grid.Row="0" Grid.Column="1">
+                    <StackPanel Grid.Row="0" Grid.Column="1" HorizontalAlignment="Center">
                         <Button x:Name="ThemeSelector" Height="25" Width="40" HorizontalAlignment="Right" Margin="20,20" Background="Beige" Content="Dark" Click="ThemeSelector_Click"/>
                         <Label x:Name="FileSourceLabel" FontFamily="Arial" FontSize="14" Width="160" Height="25" HorizontalAlignment="Center" Margin="0,10,0,0" Content="Path to Source Log File"/>
                         <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
@@ -42,7 +42,15 @@
                             <Button x:Name="DstFileButton" Width="25" Height="25" HorizontalAlignment="Center" Margin="0,0,10,0" Background="Beige" IsEnabled="True" Click="DstFileButton_Click" Content="..."/>
                             <TextBox x:Name="FileOutput" Width="300" Height="25" HorizontalAlignment="Center" BorderBrush="Black" BorderThickness="3" TextChanged="TextboxUpdated"/>
                         </StackPanel>
-                        <ComboBox x:Name="SaveTruncated" Width="300" Height="25" HorizontalAlignment="Center" Margin="35,90,0,0" Background="White" IsEnabled="True">
+                        <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="45,20,0,0">
+                            <Label x:Name="AfterDateLabel" FontFamily="Arial" FontSize="12" Width="160" Height="25" HorizontalAlignment="Center" Margin="0,30,0,0" Foreground="Black" Content="Select messages after..."/>
+                            <Label x:Name="BeforeDateLabel" FontFamily="Arial" FontSize="12" Width="160" Height="25" HorizontalAlignment="Center" Margin="0,30,0,0" Foreground="Black" Content="Select messages before..."/>
+                        </StackPanel>
+                        <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="20,0,0,0">
+                            <DatePicker x:Name="AfterDate" Width="120" Margin="25,0" SelectedDateChanged="DatePicker_Update"/>
+                            <DatePicker x:Name="BeforeDate" Width="120" Margin="20,0" SelectedDateChanged="DatePicker_Update"/>
+                        </StackPanel>
+                        <ComboBox x:Name="SaveTruncated" Width="300" Height="25" HorizontalAlignment="Center" Margin="35,40,0,0" Background="White" IsEnabled="True" SelectionChanged="ComboBox_Update">
                             <ComboBoxItem x:Name="DNSNonIntact" IsSelected="True">Do not save non-intact messages</ComboBoxItem>
                             <ComboBoxItem x:Name="SNonIntact">Save non-intact messages</ComboBoxItem>
                         </ComboBox>
@@ -69,7 +77,7 @@
                                 <ProgressBar x:Name="FileProgress" Width="600" Height="25" HorizontalAlignment="Center" Minimum="0" Maximum="100"/>
                             </StackPanel>
                         </Grid>
-                        <Label x:Name="FileVersionNumber" Content="FLogS - Version 1.0.5.4 © Taica, 2023" HorizontalAlignment="Right" FontStyle="Italic" Margin="10,15" FontWeight="Thin"/>
+                        <Label x:Name="FileVersionNumber" Content="FLogS - Version 1.0.6 © Taica, 2023" HorizontalAlignment="Right" FontStyle="Italic" Margin="10,15" FontWeight="Thin"/>
                     </StackPanel>
                 </Grid>
             </TabItem>
@@ -94,7 +102,7 @@
                             <ListBoxItem x:Name="DirectoryubBox">Unread Bytes:</ListBoxItem>
                         </ListBox>
                     </StackPanel>
-                    <StackPanel Grid.Row="0" Grid.Column="1">
+                    <StackPanel Grid.Row="0" Grid.Column="1" HorizontalAlignment="Center">
                         <Button x:Name="DirectoryThemeSelector" Height="25" Width="40" HorizontalAlignment="Right" Margin="20,20" Background="Beige" Content="Dark" Click="ThemeSelector_Click"/>
                         <Label x:Name="DirectorySourceLabel" FontFamily="Arial" FontSize="14" Width="165" Height="25" HorizontalAlignment="Center" Margin="0,10,0,0" Content="Path to Source Log Files"/>
                         <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
@@ -106,7 +114,15 @@
                             <Button x:Name="DstDirectoryButton" Width="25" Height="25" HorizontalAlignment="Center" Margin="0,0,10,0" Background="Beige" IsEnabled="True" Click="DstDirectoryButton_Click" Content="..."/>
                             <TextBox x:Name="DirectoryOutput" Width="300" Height="25" HorizontalAlignment="Center" BorderBrush="Black" BorderThickness="3" TextChanged="TextboxUpdated"/>
                         </StackPanel>
-                        <ComboBox x:Name="DirectorySaveTruncated" Width="300" Height="25" HorizontalAlignment="Center" Margin="35,90,0,0" Background="White" IsEnabled="True">
+                        <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="45,20,0,0">
+                            <Label x:Name="DirectoryAfterDateLabel" FontFamily="Arial" FontSize="12" Width="160" Height="25" HorizontalAlignment="Center" Margin="0,30,0,0" Foreground="Black" Content="Select messages after..."/>
+                            <Label x:Name="DirectoryBeforeDateLabel" FontFamily="Arial" FontSize="12" Width="160" Height="25" HorizontalAlignment="Center" Margin="0,30,0,0" Foreground="Black" Content="Select messages before..."/>
+                        </StackPanel>
+                        <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="20,0,0,0">
+                            <DatePicker x:Name="DirectoryAfterDate" Width="120" Margin="25,0" SelectedDateChanged="DatePicker_Update"/>
+                            <DatePicker x:Name="DirectoryBeforeDate" Width="120" Margin="20,0" SelectedDateChanged="DatePicker_Update"/>
+                        </StackPanel>
+                        <ComboBox x:Name="DirectorySaveTruncated" Width="300" Height="25" HorizontalAlignment="Center" Margin="35,40,0,0" Background="White" IsEnabled="True" SelectionChanged="ComboBox_Update">
                             <ComboBoxItem x:Name="DirectoryDNSNonIntact" IsSelected="True">Do not save non-intact messages</ComboBoxItem>
                             <ComboBoxItem x:Name="DirectorySNonIntact">Save non-intact messages</ComboBoxItem>
                         </ComboBox>
@@ -133,7 +149,7 @@
                                 <ProgressBar x:Name="DirectoryProgress" Width="600" Height="25" HorizontalAlignment="Center" Minimum="0" Maximum="100"/>
                             </StackPanel>
                         </Grid>
-                        <Label x:Name="DirectoryVersionNumber" Content="FLogS - Version 1.0.5.4 © Taica, 2023" HorizontalAlignment="Right" FontStyle="Italic" Margin="10,15" FontWeight="Thin"/>
+                        <Label x:Name="DirectoryVersionNumber" Content="FLogS - Version 1.0.6 © Taica, 2023" HorizontalAlignment="Right" FontStyle="Italic" Margin="10,15" FontWeight="Thin"/>
                     </StackPanel>
                 </Grid>
             </TabItem>
@@ -165,6 +181,7 @@
                             Click on the <Bold>File</Bold> tab at the top to export a single log file, or <Bold>Directory</Bold> to export many files at once.<LineBreak/>
                             Select one or more F-Chat log files by clicking the first button labelled "..." and following the prompt. Or, you may enter a path manually.<LineBreak/>
                             Select a destination file or folder by clicking the second "..." button or entering a manual path.<LineBreak/>
+                            You may optionally enter an inclusive range of dates to scan for messages - <Bold>FLogS</Bold> will discard messages outside this range.<LineBreak/>
                             Finally, hit the Run button!
                         </TextBlock>
                     </StackPanel>
@@ -176,7 +193,7 @@
                             The program will note in its output where some data could not be read - typically, it's only a few bytes at a time.<LineBreak/>
                             <Span x:Name="ADLWarning" Foreground="Red"><Bold>FLogS</Bold> is not a substitute for ADL</Span>: Plaintext logs generated by this program <Italic>cannot</Italic> be accepted by F-List staff in case of a dispute, even if the source file is completely intact.
                         </TextBlock>
-                        <Label x:Name="HelpVersionNumber" Content="FLogS - Version 1.0.5.4 © Taica, 2023" HorizontalAlignment="Right" FontStyle="Italic" Margin="10,-14" FontWeight="Thin"/>
+                        <Label x:Name="HelpVersionNumber" Content="FLogS - Version 1.0.6 © Taica, 2023" HorizontalAlignment="Right" FontStyle="Italic" Margin="10,-14" FontWeight="Thin"/>
                     </StackPanel>
                 </Grid>
             </TabItem>
