--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -6,9 +6,9 @@
         xmlns:local="clr-namespace:FLogS"
         mc:Ignorable="d"
         Loaded="MainGrid_Loaded"
-        Title="FLogS" Height="600" Width="800">
-    <Grid x:Name="MainGrid" Background="Gray">
-        <TabControl x:Name="TabMenu">
+        Title="FLogS" Height="600" Width="800" Background="Gray">
+    <Grid x:Name="MainGrid">
+        <TabControl x:Name="TabMenu" Background="LightGray" BorderBrush="DarkGray" BorderThickness="3">
             <TabItem Header="File" x:Name="TabFile">
                 <Grid x:Name="FileGrid" Background="LightGray">
                     <Grid.ColumnDefinitions>
@@ -20,24 +20,24 @@
                         <RowDefinition Height="*"></RowDefinition>
                     </Grid.RowDefinitions>
                     <StackPanel Grid.Row="0" Grid.Column="0">
-                        <ListBox x:Name="LogWindow" Width="350" Height="350" HorizontalAlignment="Center" Margin="0,30" Padding="3" FontSize="14" BorderBrush="Black" BorderThickness="2">
-                            <ListBoxItem x:Name="headerBox">Ready to receive data.</ListBoxItem>
+                        <ListBox x:Name="LogWindow" Width="350" Height="350" Margin="0,30" HorizontalAlignment="Center" Padding="3" FontSize="14" BorderBrush="Black" BorderThickness="2">
+                            <ListBoxItem x:Name="HeaderBox">Ready to receive data.</ListBoxItem>
                             <ListBoxItem Margin="10" Visibility="Hidden" IsHitTestVisible="False"></ListBoxItem>
-                            <ListBoxItem x:Name="imBox" FontWeight="Bold">Intact Messages:</ListBoxItem>
-                            <ListBoxItem x:Name="ctBox">Corrupted Timestamps:</ListBoxItem>
-                            <ListBoxItem x:Name="tmBox">Truncated Messages:</ListBoxItem>
-                            <ListBoxItem x:Name="emBox">Empty Messages:</ListBoxItem>
-                            <ListBoxItem x:Name="ubBox">Unread Bytes:</ListBoxItem>
+                            <ListBoxItem x:Name="IMBox" FontWeight="Bold">Intact Messages:</ListBoxItem>
+                            <ListBoxItem x:Name="CTBox">Corrupted Timestamps:</ListBoxItem>
+                            <ListBoxItem x:Name="TMBox">Truncated Messages:</ListBoxItem>
+                            <ListBoxItem x:Name="EMBox">Empty Messages:</ListBoxItem>
+                            <ListBoxItem x:Name="UBBox">Unread Bytes:</ListBoxItem>
                         </ListBox>
                     </StackPanel>
                     <StackPanel Grid.Row="0" Grid.Column="1" HorizontalAlignment="Center">
                         <Button x:Name="ThemeSelector" Height="25" Width="40" HorizontalAlignment="Right" Margin="20,20" Background="Beige" Content="Dark" Click="ThemeSelector_Click"/>
-                        <Label x:Name="FileSourceLabel" FontFamily="Arial" FontSize="14" Width="160" Height="25" HorizontalAlignment="Center" Margin="0,10,0,0" Content="Path to Source Log File"/>
+                        <Label x:Name="FileSourceLabel" FontFamily="Arial" FontSize="14" Width="160" Height="25" HorizontalAlignment="Center" Margin="35,0,0,0" Content="Path to Source Log File"/>
                         <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
                             <Button x:Name="SrcFileButton" Width="25" Height="25" HorizontalAlignment="Center" Margin="0,0,10,0" Background="Beige" IsEnabled="True" Click="SrcFileButton_Click" Content="..."/>
                             <TextBox x:Name="FileSource" Width="300" Height="25" HorizontalAlignment="Center" BorderBrush="Black" BorderThickness="2" TextChanged="TextboxUpdated"/>
                         </StackPanel>
-                        <Label x:Name="FileOutputLabel" FontFamily="Arial" FontSize="14" Width="190" Height="25" HorizontalAlignment="Center" Margin="0,20,0,0" Content="Path to Destination Log File"/>
+                        <Label x:Name="FileOutputLabel" FontFamily="Arial" FontSize="14" Width="190" Height="25" HorizontalAlignment="Center" Margin="35,20,0,0" Content="Path to Destination Log File"/>
                         <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
                             <Button x:Name="DstFileButton" Width="25" Height="25" HorizontalAlignment="Center" Margin="0,0,10,0" Background="Beige" IsEnabled="True" Click="DstFileButton_Click" Content="..."/>
                             <TextBox x:Name="FileOutput" Width="300" Height="25" HorizontalAlignment="Center" BorderBrush="Black" BorderThickness="2" TextChanged="TextboxUpdated"/>
@@ -77,7 +77,7 @@
                                 <ProgressBar x:Name="FileProgress" Width="600" Height="25" HorizontalAlignment="Center" Minimum="0" Maximum="100"/>
                             </StackPanel>
                         </Grid>
-                        <Label x:Name="FileVersionNumber" Content="FLogS — Version 1.0.7 © Taica, 2023" HorizontalAlignment="Right" FontStyle="Italic" Margin="10,15" FontWeight="Thin"/>
+                        <Label x:Name="FileVersionNumber" Content="FLogS — Version 1.0.7.1 © Taica, 2023" HorizontalAlignment="Right" FontStyle="Italic" Margin="10,15" FontWeight="Thin"/>
                     </StackPanel>
                 </Grid>
             </TabItem>
@@ -93,23 +93,23 @@
                     </Grid.RowDefinitions>
                     <StackPanel Grid.Row="0" Grid.Column="0">
                         <ListBox x:Name="DirectoryLogWindow" Width="350" Height="350" HorizontalAlignment="Center" Margin="0,30" Padding="3" FontSize="14" BorderBrush="Black" BorderThickness="2">
-                            <ListBoxItem x:Name="DirectoryheaderBox">Ready to receive data.</ListBoxItem>
+                            <ListBoxItem x:Name="DirectoryHeaderBox">Ready to receive data.</ListBoxItem>
                             <ListBoxItem Margin="10" Visibility="Hidden" IsHitTestVisible="False"></ListBoxItem>
-                            <ListBoxItem x:Name="DirectoryimBox" FontWeight="Bold">Intact Messages:</ListBoxItem>
-                            <ListBoxItem x:Name="DirectoryctBox">Corrupted Timestamps:</ListBoxItem>
-                            <ListBoxItem x:Name="DirectorytmBox">Truncated Messages:</ListBoxItem>
-                            <ListBoxItem x:Name="DirectoryemBox">Empty Messages:</ListBoxItem>
-                            <ListBoxItem x:Name="DirectoryubBox">Unread Bytes:</ListBoxItem>
+                            <ListBoxItem x:Name="DirectoryIMBox" FontWeight="Bold">Intact Messages:</ListBoxItem>
+                            <ListBoxItem x:Name="DirectoryCTBox">Corrupted Timestamps:</ListBoxItem>
+                            <ListBoxItem x:Name="DirectoryTMBox">Truncated Messages:</ListBoxItem>
+                            <ListBoxItem x:Name="DirectoryEMBox">Empty Messages:</ListBoxItem>
+                            <ListBoxItem x:Name="DirectoryUBBox">Unread Bytes:</ListBoxItem>
                         </ListBox>
                     </StackPanel>
                     <StackPanel Grid.Row="0" Grid.Column="1" HorizontalAlignment="Center">
                         <Button x:Name="DirectoryThemeSelector" Height="25" Width="40" HorizontalAlignment="Right" Margin="20,20" Background="Beige" Content="Dark" Click="ThemeSelector_Click"/>
-                        <Label x:Name="DirectorySourceLabel" FontFamily="Arial" FontSize="14" Width="165" Height="25" HorizontalAlignment="Center" Margin="0,10,0,0" Content="Path to Source Log Files"/>
+                        <Label x:Name="DirectorySourceLabel" FontFamily="Arial" FontSize="14" Width="165" Height="25" HorizontalAlignment="Center" Margin="35,0,0,0" Content="Path to Source Log Files"/>
                         <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
                             <Button x:Name="SrcDirectoryButton" Width="25" Height="25" HorizontalAlignment="Center" Margin="0,0,10,0" Background="Beige" IsEnabled="True" Click="SrcDirectoryButton_Click" Content="..."/>
                             <TextBox x:Name="DirectorySource" Width="300" Height="25" HorizontalAlignment="Center" BorderBrush="Black" BorderThickness="2" TextChanged="TextboxUpdated"/>
                         </StackPanel>
-                        <Label x:Name="DirectoryOutputLabel" FontFamily="Arial" FontSize="14" Width="220" Height="25" HorizontalAlignment="Center" Margin="0,20,0,0" Content="Path to Destination Log Directory"/>
+                        <Label x:Name="DirectoryOutputLabel" FontFamily="Arial" FontSize="14" Width="220" Height="25" HorizontalAlignment="Center" Margin="35,20,0,0" Content="Path to Destination Log Directory"/>
                         <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
                             <Button x:Name="DstDirectoryButton" Width="25" Height="25" HorizontalAlignment="Center" Margin="0,0,10,0" Background="Beige" IsEnabled="True" Click="DstDirectoryButton_Click" Content="..."/>
                             <TextBox x:Name="DirectoryOutput" Width="300" Height="25" HorizontalAlignment="Center" BorderBrush="Black" BorderThickness="2" TextChanged="TextboxUpdated"/>
@@ -149,7 +149,7 @@
                                 <ProgressBar x:Name="DirectoryProgress" Width="600" Height="25" HorizontalAlignment="Center" Minimum="0" Maximum="100"/>
                             </StackPanel>
                         </Grid>
-                        <Label x:Name="DirectoryVersionNumber" Content="FLogS — Version 1.0.7 © Taica, 2023" HorizontalAlignment="Right" FontStyle="Italic" Margin="10,15" FontWeight="Thin"/>
+                        <Label x:Name="DirectoryVersionNumber" Content="FLogS — Version 1.0.7.1 © Taica, 2023" HorizontalAlignment="Right" FontStyle="Italic" Margin="10,15" FontWeight="Thin"/>
                     </StackPanel>
                 </Grid>
             </TabItem>
@@ -165,28 +165,28 @@
                     </Grid.RowDefinitions>
                     <StackPanel Grid.Row="0" Grid.Column="0">
                         <ListBox x:Name="PhraseLogWindow" Width="350" Height="350" HorizontalAlignment="Center" Margin="0,30" Padding="3" FontSize="14" BorderBrush="Black" BorderThickness="2">
-                            <ListBoxItem x:Name="PhraseheaderBox">Ready to receive data.</ListBoxItem>
+                            <ListBoxItem x:Name="PhraseHeaderBox">Ready to receive data.</ListBoxItem>
                             <ListBoxItem Margin="10" Visibility="Hidden" IsHitTestVisible="False"></ListBoxItem>
-                            <ListBoxItem x:Name="PhraseimBox" FontWeight="Bold">Intact Messages:</ListBoxItem>
-                            <ListBoxItem x:Name="PhrasectBox">Corrupted Timestamps:</ListBoxItem>
-                            <ListBoxItem x:Name="PhrasetmBox">Truncated Messages:</ListBoxItem>
-                            <ListBoxItem x:Name="PhraseemBox">Empty Messages:</ListBoxItem>
-                            <ListBoxItem x:Name="PhraseubBox">Unread Bytes:</ListBoxItem>
+                            <ListBoxItem x:Name="PhraseIMBox" FontWeight="Bold">Intact Messages:</ListBoxItem>
+                            <ListBoxItem x:Name="PhraseCTBox">Corrupted Timestamps:</ListBoxItem>
+                            <ListBoxItem x:Name="PhraseTMBox">Truncated Messages:</ListBoxItem>
+                            <ListBoxItem x:Name="PhraseEMBox">Empty Messages:</ListBoxItem>
+                            <ListBoxItem x:Name="PhraseUBBox">Unread Bytes:</ListBoxItem>
                         </ListBox>
                     </StackPanel>
                     <StackPanel Grid.Row="0" Grid.Column="1" HorizontalAlignment="Center">
                         <Button x:Name="PhraseThemeSelector" Height="25" Width="40" HorizontalAlignment="Right" Margin="20,20" Background="Beige" Content="Dark" Click="ThemeSelector_Click"/>
-                        <Label x:Name="PhraseSourceLabel" FontFamily="Arial" FontSize="14" Width="165" Height="25" HorizontalAlignment="Center" Margin="0,10,0,0" Content="Path to Source Log Files"/>
+                        <Label x:Name="PhraseSourceLabel" FontFamily="Arial" FontSize="14" Width="165" Height="25" HorizontalAlignment="Center" Margin="35,0,0,0" Content="Path to Source Log Files"/>
                         <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
                             <Button x:Name="SrcPhraseButton" Width="25" Height="25" HorizontalAlignment="Center" Margin="0,0,10,0" Background="Beige" IsEnabled="True" Click="SrcPhraseButton_Click" Content="..."/>
                             <TextBox x:Name="PhraseSource" Width="300" Height="25" HorizontalAlignment="Center" BorderBrush="Black" BorderThickness="2" TextChanged="TextboxUpdated"/>
                         </StackPanel>
-                        <Label x:Name="PhraseOutputLabel" FontFamily="Arial" FontSize="14" Width="220" Height="25" HorizontalAlignment="Center" Margin="0,20,0,0" Content="Path to Destination Log Directory"/>
+                        <Label x:Name="PhraseOutputLabel" FontFamily="Arial" FontSize="14" Width="220" Height="25" HorizontalAlignment="Center" Margin="35,20,0,0" Content="Path to Destination Log Directory"/>
                         <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
                             <Button x:Name="DstPhraseButton" Width="25" Height="25" HorizontalAlignment="Center" Margin="0,0,10,0" Background="Beige" IsEnabled="True" Click="DstPhraseButton_Click" Content="..."/>
                             <TextBox x:Name="PhraseOutput" Width="300" Height="25" HorizontalAlignment="Center" BorderBrush="Black" BorderThickness="2" TextChanged="TextboxUpdated"/>
                         </StackPanel>
-                        <Label x:Name="PhraseSearchLabel" FontFamily="Arial" FontSize="14" Width="220" Height="25" HorizontalAlignment="Center" HorizontalContentAlignment="Center" Margin="0,20,0,0" Content="Target Word or Phrase"/>
+                        <Label x:Name="PhraseSearchLabel" FontFamily="Arial" FontSize="14" Width="220" Height="25" HorizontalAlignment="Center" HorizontalContentAlignment="Center" Margin="35,20,0,0" Content="Target Word or Phrase"/>
                         <TextBox x:Name="PhraseSearch" Width="300" Height="25" HorizontalAlignment="Center" Margin="35,0,0,0" BorderBrush="Black" BorderThickness="2" TextChanged="TextboxUpdated"/>
                         <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="45,0,0,0">
                             <Label x:Name="PhraseAfterDateLabel" FontFamily="Arial" FontSize="12" Width="160" Height="25" HorizontalAlignment="Center" Margin="0,30,0,0" Foreground="Black" Content="Select messages after..."/>
@@ -223,7 +223,7 @@
                                 <ProgressBar x:Name="PhraseProgress" Width="600" Height="25" HorizontalAlignment="Center" Minimum="0" Maximum="100"/>
                             </StackPanel>
                         </Grid>
-                        <Label x:Name="PhraseVersionNumber" Content="FLogS — Version 1.0.7 © Taica, 2023" HorizontalAlignment="Right" FontStyle="Italic" Margin="10,15" FontWeight="Thin"/>
+                        <Label x:Name="PhraseVersionNumber" Content="FLogS — Version 1.0.7.1 © Taica, 2023" HorizontalAlignment="Right" FontStyle="Italic" Margin="10,15" FontWeight="Thin"/>
                     </StackPanel>
                 </Grid>
             </TabItem>
@@ -271,7 +271,7 @@
                         </TextBlock>
                     </StackPanel>
                     <StackPanel Grid.Row="1" Grid.Column="1" VerticalAlignment="Bottom">
-                        <Label x:Name="HelpVersionNumber" Content="FLogS — Version 1.0.7 © Taica, 2023" HorizontalAlignment="Right" FontStyle="Italic" Margin="10,2" FontWeight="Thin"/>
+                        <Label x:Name="HelpVersionNumber" Content="FLogS — Version 1.0.7.1 © Taica, 2023" HorizontalAlignment="Right" FontStyle="Italic" Margin="10,1" FontWeight="Thin"/>
                     </StackPanel>
                 </Grid>
             </TabItem>
